--- a/eras/templates/disasters/my_disasters.html
+++ b/eras/templates/disasters/my_disasters.html
@@ -1,3 +1,5 @@
+{% load static %}
+{% load disasters_tags %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -163,14 +165,14 @@
                                                     <i class="fas fa-eye mr-1"></i>View
                                                 </a>
 
-                                                {% if disaster.can_edit:user %}
+                                                {% if disaster.can_edit %}
                                                     <a href="{% url 'disasters:edit_disaster' disaster.id %}"
                                                        class="text-green-600 hover:text-green-700 text-sm font-medium">
                                                         <i class="fas fa-edit mr-1"></i>Edit
                                                     </a>
                                                 {% endif %}
 
-                                                {% if disaster.can_delete:user %}
+                                                {% if disaster.can_delete %}
                                                     <a href="{% url 'disasters:delete_disaster' disaster.id %}"
                                                        class="text-red-600 hover:text-red-700 text-sm font-medium"
                                                        onclick="return confirm('Are you sure you want to delete this report?')">
