--- a/eras/templates/homepage.html
+++ b/eras/templates/homepage.html
@@ -407,7 +407,7 @@
                 <h3 class="text-lg font-bold text-white mb-4">Quick Links</h3>
                 <ul class="text-sm space-y-2">
                     <li><a href="#" class="hover:text-white transition duration-300">Home</a></li>
-                    <li><a href="#" class="hover:text-white transition duration-300">About Us</a></li>
+                    <li><a href="{% url 'about_us' %}" class="hover:text-white transition duration-300">About Us</a></li>
                     <li><a href="#" class="hover:text-white transition duration-300">Services</a></li>
                     <li><a href="#" class="hover:text-white transition duration-300">Contact</a></li>
                 </ul>
