--- a/eras/templates/homepage.html
+++ b/eras/templates/homepage.html
@@ -54,9 +54,10 @@
                 <a href="#" class="text-gray-600 hover:text-custom-red transition duration-300">EN</a>
                 {% if user.is_authenticated %}
         <span class="text-gray-600">Welcome, {{ user.username }}</span>
+<!--
                     {% if user.user_type == 'citizen' %}
                         <a href="{% url 'citizen_profile_setup' %}" class="text-gray-600 hover:text-custom-red transition duration-300">Profile</a>
-                    {% endif %}
+                    {% endif %}-->
                     <a href="{% url 'logout' %}" class="bg-custom-red text-white py-2 px-4 rounded-full shadow-lg hover:bg-red-700 transition duration-300">Logout</a>
                 {% else %}
                     <a href="{% url 'login' %}" class="text-gray-600 hover:text-custom-red transition duration-300">Login</a>
