--- a/eras/static/css/style.css
+++ b/eras/static/css/style.css
@@ -23,6 +23,7 @@ body {
     top: 50%;
     left: 50%;
     min-width: 100%;
+    max-width: 100%;
     min-height: 100%;
     width: auto;
     height: auto;
@@ -90,6 +91,7 @@ body {
     .hero-section video {
         /* On mobile, you can optionally hide video to save bandwidth */
         /* display: none; */
+        opacity: 0.5;
     }
 }
 
