--- a/eras/templates/homepage.html
+++ b/eras/templates/homepage.html
@@ -42,7 +42,7 @@
             <div class="hidden md:flex items-center space-x-6">
     <a href="{% url 'homepage' %}" class="text-gray-600 hover:text-custom-red transition duration-300">Home</a>
     <a href="{% url 'disasters:disaster_list' %}" class="text-gray-600 hover:text-custom-red transition duration-300">Alerts</a>
-    <a href="#" class="text-gray-600 hover:text-custom-red transition duration-300">Blood Network</a>
+    <a href="{% url 'blood_network' %}" class="text-gray-600 hover:text-custom-red transition duration-300">Blood Network</a>
     <a href="{% url 'service_provider_directory' %}" class="text-gray-600 hover:text-custom-red transition duration-300">Services</a>
     {% if user.is_authenticated and user.user_type == 'citizen' %}
         <a href="{% url 'citizen_dashboard' %}" class="text-gray-600 hover:text-custom-red transition duration-300">Dashboard</a>
